--- a/src/CSAuto/Languages/Strings.resx
+++ b/src/CSAuto/Languages/Strings.resx
@@ -722,4 +722,10 @@ Try to download the latest version from github, if it didn't help create a bug r
   <data name="msgbox_cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="msgbox_crashreportsentsuccess" xml:space="preserve">
+    <value>Crash report has been sent successfully!</value>
+  </data>
+  <data name="msgbox_crashreportsentfail" xml:space="preserve">
+    <value>An error occurred when sending the crash report</value>
+  </data>
 </root>
